[tool.poetry]
name = "jupyter_nbenum"
version = "1.0.0"
description = ""
authors = ["An Hoang <anhoang31415@gmail.com>"]
readme = "README.md"
repository = ""

[tool.poetry.dependencies]
python = "^3.8"
nbformat = "^5.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
jupyter-nbenum = "jupyter_nbenum.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
