[tool.poetry]
name = "jupyter_nbenum"
version = "1.0.1"
description = "Indexes the headings in a Jupyter notebook and adds a clickable table of contents."
authors = ["An Hoang <anhoang31415@gmail.com>"]
readme = "README.md"
repository = "https://github.com/AnH0ang/jupyter-nbenum"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nbformat = "^5.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
jupyter-nbenum = "jupyter_nbenum.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
